add categoryID for FE Content
